// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component does not render when panels are empty 1`] = `
<div>
  





</div>
`;

exports[`Tabs Component renders with generated links from panels 1`] = `
<div>
  



                        
  
  <div
    class="ct-tabs ct-theme-light  "
    data-tabs-panel=""
  >
    
    

  
    <ul
      class="ct-item-list ct-item-list--horizontal ct-item-list--regular ct-item-list--no-gap ct-tabs__links"
    >
      
                  
      <li
        class="ct-item-list__item"
      >
            
        <a
          aria-controls="tab1"
          class="ct-link ct-theme-light"
          data-tabs-tab=""
          href="#tab1-tab"
          id="tab1-tab"
          role="tab"
        >
          Tab 1
        </a>
          
      </li>
      
                        
      <li
        class="ct-item-list__item"
      >
            
        <a
          aria-controls="tab2"
          class="ct-link ct-theme-light"
          data-tabs-tab=""
          href="#tab2-tab"
          id="tab2-tab"
          role="tab"
        >
          Tab 2
        </a>
          
      </li>
      
            
    </ul>
    

          
    <div
      class="ct-tabs__panels"
    >
      
                              
      <div
        aria-labelledby="tab1-tab"
        class="ct-tabs__panels__panel selected"
        data-tabs-panel=""
        id="tab1"
        role="tabpanel"
      >
        
              Content for Tab 1
            
      </div>
      
                                        
      <div
        aria-labelledby="tab2-tab"
        class="ct-tabs__panels__panel "
        data-tabs-panel=""
        id="tab2"
        role="tabpanel"
      >
        
              Content for Tab 2
            
      </div>
      
                        
    </div>
    
      
  </div>
  

</div>
`;

exports[`Tabs Component renders with optional attributes 1`] = `
<div>
  



                        
  
  <div
    class="ct-tabs ct-theme-dark ct-vertical-spacing--both custom-class"
    data-tabs-panel=""
    data-test="true"
  >
    
    

  
    <ul
      class="ct-item-list ct-item-list--horizontal ct-item-list--regular ct-item-list--no-gap ct-tabs__links"
    >
      
                  
      <li
        class="ct-item-list__item"
      >
            
        <a
          aria-controls="tab1"
          class="ct-link ct-theme-dark"
          data-tabs-tab=""
          href="#tab1-tab"
          id="tab1-tab"
          role="tab"
        >
          Tab 1
        </a>
          
      </li>
      
                        
      <li
        class="ct-item-list__item"
      >
            
        <a
          aria-controls="tab2"
          class="ct-link ct-theme-dark"
          data-tabs-tab=""
          href="#tab2-tab"
          id="tab2-tab"
          role="tab"
        >
          Tab 2
        </a>
          
      </li>
      
            
    </ul>
    

          
    <div
      class="ct-tabs__panels"
    >
      
                              
      <div
        aria-labelledby="tab1-tab"
        class="ct-tabs__panels__panel selected"
        data-tabs-panel=""
        id="tab1"
        role="tabpanel"
      >
        
              Content for Tab 1
            
      </div>
      
                                        
      <div
        aria-labelledby="tab2-tab"
        class="ct-tabs__panels__panel "
        data-tabs-panel=""
        id="tab2"
        role="tabpanel"
      >
        
              Content for Tab 2
            
      </div>
      
                        
    </div>
    
      
  </div>
  

</div>
`;

exports[`Tabs Component renders with required attributes 1`] = `
<div>
  



                        
  
  <div
    class="ct-tabs ct-theme-light  "
    data-tabs-panel=""
  >
    
    

  
    <ul
      class="ct-item-list ct-item-list--horizontal ct-item-list--regular ct-item-list--no-gap ct-tabs__links"
    >
      
                  
      <li
        class="ct-item-list__item"
      >
            
        <a
          aria-controls="tab1"
          class="ct-link ct-theme-light"
          data-tabs-tab=""
          href="#tab1-tab"
          id="tab1-tab"
          role="tab"
        >
          Tab 1
        </a>
          
      </li>
      
                        
      <li
        class="ct-item-list__item"
      >
            
        <a
          aria-controls="tab2"
          class="ct-link ct-theme-light"
          data-tabs-tab=""
          href="#tab2-tab"
          id="tab2-tab"
          role="tab"
        >
          Tab 2
        </a>
          
      </li>
      
            
    </ul>
    

          
    <div
      class="ct-tabs__panels"
    >
      
                              
      <div
        aria-labelledby="tab1-tab"
        class="ct-tabs__panels__panel selected"
        data-tabs-panel=""
        id="tab1"
        role="tabpanel"
      >
        
              Content for Tab 1
            
      </div>
      
                                        
      <div
        aria-labelledby="tab2-tab"
        class="ct-tabs__panels__panel "
        data-tabs-panel=""
        id="tab2"
        role="tabpanel"
      >
        
              Content for Tab 2
            
      </div>
      
                        
    </div>
    
      
  </div>
  

</div>
`;
